--- a/jenkins_project/pom.xml
+++ b/jenkins_project/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.3.0.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
