--- a/jenkins_project/pom.xml
+++ b/jenkins_project/pom.xml
@@ -51,6 +51,39 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- 打包时即package 时将war打到指定目录 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-war</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>${project.packaging}</type>
+                                    <destFileName>test.war</destFileName><!-- 重写目标文件名称 -->
+                                </artifactItem>
+                            </artifactItems>
+                            <!--<outputDirectory>/opt/apache-tomcat-7.0.90/webapps</outputDirectory>-->
+                             <outputDirectory>G://test</outputDirectory>
+                            <includes>
+                                <include>*.jar</include>
+                            </includes>
+                            <stripVersion>true</stripVersion>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
         <resources>
             <resource>
